--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -239,6 +239,12 @@ jobs:
               issue_number: context.issue.number,
               body: body
             });
+            await github.reactions.createForIssueComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: context.payload.comment.id,
+                content: '+1'
+            });
 
   fail:
     needs: [start, build, upload]
